NULL =

templatesdir = $(pkgdatadir)/templates

# the created tar archive can be extracted with: tar -zxvf tar-archive.tar.gz

dist_templates_DATA = \
	console-vala-template.ini \
	console-vala-template.png \
	console-vala-template.tar.gz \
	gtk+-vala-template.ini \
	gtk+-vala-template.png \
	gtk+-vala-template.tar.gz \
	sharedlib-vala-template.ini \
	sharedlib-vala-template.png \
	sharedlib-vala-template.tar.gz \
	gedit-2.20-plugin.ini \
	gedit-2.20-plugin.png \
	gedit-2.20-plugin.tar.gz \
	gedit-3.0-plugin.ini \
	gedit-3.0-plugin.png \
	gedit-3.0-plugin.tar.gz \
	$(NULL)

DISTCLEANFILES = \
	$(NULL)

